# nat-cal-man

./: Cargo.toml  settings.json5
src/: main.rs  settings.rs
src/dav/: calendar.rs  common.rs  mod.rs  recv.rs  send.rs
src/rooms/: mod.rs  room.rs
