[package]
name = "nat-cal-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true

[dependencies.async-std]
version = "^1.11.0"
features = ["attributes"]

[dependencies.anyhow]
version = "^1.0.57"
features = ["backtrace"]

[dependencies.serde]
version = "^1.0.137"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0.81"

[dependencies.futures]
version = "^0.3.21"

[dependencies.isahc]
version = "^1.7.2"

[dependencies.base64]
version = "^0.13.0"

[dependencies.minidom]
version = "^0.14.0"

[dependencies.bitflags]
version = "^1.3.2"